--- a/util/html/styleCode.css
+++ b/util/html/styleCode.css
@@ -1,5 +1,5 @@
 .highlight .c { color: #999999; font-style: italic }
-.highlight .err { color: #a61717; background-color: #e3d2d2 }
+.highlight .err { color: #a61717;}
 .highlight .esc { color: #d0d0d0 }
 .highlight .g { color: #d0d0d0 }
 .highlight .k { color: #6ab825; font-weight: bold }
@@ -13,7 +13,7 @@
 .highlight .cp { color: #cd2828; font-weight: bold }
 .highlight .cpf { color: #999999; font-style: italic }
 .highlight .c1 { color: #999999; font-style: italic }
-.highlight .cs { color: #e50808; font-weight: bold; background-color: #520000 }
+.highlight .cs { color: #e50808; font-weight: bold;}
 .highlight .gd { color: #d22323 }
 .highlight .ge { color: #d0d0d0; font-style: italic }
 .highlight .gr { color: #d22323 }
@@ -22,7 +22,7 @@
 .highlight .go { color: #cccccc }
 .highlight .gp { color: #aaaaaa }
 .highlight .gs { color: #d0d0d0; font-weight: bold }
-.highlight .gu { color: #ffffff; text-decoration: underline }
+.highlight .gu { color: #ffffff;}
 .highlight .gt { color: #d22323 }
 .highlight .kc { color: #6ab825; font-weight: bold }
 .highlight .kd { color: #6ab825; font-weight: bold }
@@ -35,14 +35,14 @@
 .highlight .s { color: #ed9d13 }
 .highlight .na { color: #bbbbbb }
 .highlight .nb { color: #24909d }
-.highlight .nc { color: #447fcf; text-decoration: underline }
+.highlight .nc { color: #447fcf;}
 .highlight .no { color: #40ffff }
 .highlight .nd { color: #ffa500 }
 .highlight .ni { color: #d0d0d0 }
 .highlight .ne { color: #bbbbbb }
 .highlight .nf { color: #447fcf }
 .highlight .nl { color: #d0d0d0 }
-.highlight .nn { color: #447fcf; text-decoration: underline }
+.highlight .nn { color: #447fcf;}
 .highlight .nx { color: #d0d0d0 }
 .highlight .py { color: #d0d0d0 }
 .highlight .nt { color: #6ab825; font-weight: bold }
@@ -74,15 +74,11 @@
 .highlight .vi { color: #40ffff }
 .highlight .vm { color: #40ffff }
 .highlight .il { color: #3677a9 }
-.wrapper{
-    border: 1px solid #ffa500;
-    margin: auto;
-    max-width: 40em;
-    padding: 20px 20px;
-}
 .highlight .hll { background-color: #404040 }
-.highlight  { background: #2f3640; color: #d0d0d0 }
-.highlight{
+.highlight {
+	margin: 40px 0;
+    background: #2f3640;
+    color: #fff;
 	padding: 20px 20px;
 	font-size: 16px;
 	overflow: auto;
