--- a/util/html/styleText.css
+++ b/util/html/styleText.css
@@ -1,69 +1,32 @@
-:root {
-  --bg-color: #ffffff;
-  --text-color: #333333;
-  --monospace: "Lucida Console", Consolas, "Courier", monospace;
-  --active-file-bg-color: rgba(32, 43, 51, 0.63);
-  --active-file-text-color: white;
-  --control-text-color: #444;
-  --rawblock-edit-panel-bd: #e5e5e5;
-  --select-text-bg-color: #0084ff;
-  --select-text-font-color: white;
-}
-::selection {
-  text-shadow: none;
-  background: var(--select-text-bg-color);
-  color: var(--select-text-font-color);
-}
-
 *,
 ::after,
 ::before {
   box-sizing: border-box;
 }
 
-html {
-  overflow-x: initial !important;
-  -webkit-font-smoothing: antialiased;
-}
-
-body {
-  margin: 0px;
-  padding: 0px;
-  height: auto;
-  bottom: 0px;
-  top: 0px;
-  left: 0px;
-  right: 0px;
+body { 
   font-size: 1.2rem;
-  background: inherit;
-  tab-size: 4;
   line-height: 1.5em;
-}
-
-html,
-body {
   background-color: #f6f6f6;
   font-family: "PT Serif", "Times New Roman", Times, serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: rgb(31, 9, 9);
 }
-iframe {
-  max-width: 100%;
-  width: 100%;
-  border: none;
-  margin: auto;
-}
+
 .article {
   max-width: 45em;
   margin: 0px auto;
-  height: auto;
-  word-break: normal;
-  overflow-wrap: break-word;
-  position: relative;
-  white-space: normal;
   padding: 50px;
+  margin-bottom: 10px;
+  background: #fff;
+  overflow: hidden;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1px 3px rgba(26, 26, 26, 0.1);
+  box-shadow: 0 1px 3px rgba(26, 26, 26, 0.1);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 p {
-  text-indent: 2em;
   margin-bottom: 1.5em;
   line-height: inherit;
 }
@@ -80,72 +43,11 @@ p + ol {
   margin-top: 0.5em;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-  position: relative;
-  break-after: avoid-page;
-  break-inside: avoid;
-  margin-top: 1rem;
-  width: inherit;
-  font-weight: bold;
-  margin-bottom: 1.5em;
-}
-
-h1 {
-  font-size: 2em;
-  font-weight: normal;
-  line-height: 1.6em;
-  margin-top: 2em;
-  margin-bottom: 0.5em;
-  border-bottom: 1px solid;
-  border-color: rgb(197, 197, 197);
-  padding-bottom: 0.8em;
-}
-h2,
-h3 {
-  margin-bottom: 0.8em;
-  line-height: 1.2em;
-  margin-top: 2.2em;
-}
-h2 {
-  font-size: 1.8em;
-}
-h3 {
-  font-size: 1.6em;
-  font-weight: normal;
-}
-h4 {
-  font-size: 1.4em;
-  margin-top: 2.7;
-}
-h5 {
-  font-size: 1.2em;
-}
-h6 {
-  font-size: 1em;
-}
-
-h3 + ul,
-h4 + ul,
-h5 + ul,
-h6 + ul,
-h3 + ol,
-h4 + ol,
-h5 + ol,
-h6 + ol {
-  margin-top: 0.5em;
-}
 blockquote {
   margin: 0 2em;
   background: #eee;
   border-radius: 5px;
   padding: 15px;
-  border-color: rgb(186, 186, 186);
-  border-left: 5px solid;
   color: rgb(101, 101, 101);
   font-style: italic;
 }
@@ -193,14 +95,11 @@ a {
 a:hover,
 a:active {
   text-decoration: none;
+  color: #ff6188;
+  outline: 0px;
 }
 a.url {
   word-break: break-all;
-}
-
-a:active,
-a:hover {
-  outline: 0px;
 }
 
 table tr th {
@@ -217,6 +116,7 @@ table {
   break-inside: auto;
   text-align: left;
 }
+
 header,
 footer {
   font-family: "PT Serif", "Times New Roman", Times, serif;
@@ -324,10 +224,7 @@ tt {
 }
 
 hr {
-  border-top: none;
-  border-right: none;
   border-bottom: 1px solid #d6d6d6;
-  border-left: none;
   margin-inline-start: 15%;
   margin-inline-end: 15%;
   margin-block-start: 5rem;
@@ -349,7 +246,7 @@ figure {
 
 figure img {
   display: block;
-  max-width: 100%;
+  max-width: 60%;
   margin: auto;
 }
 
